# miricoord

./: .gitignore  README.md  pyproject.toml  setup.py
data/crds/: jwst_miri_distortion_0027.asdf  jwst_miri_filteroffset_cdp7.asdf  jwst_miri_filteroffset_flt1.asdf  jwst_miri_filteroffset_poly6.asdf  jwst_miri_imager_distortion_cdp7.asdf  jwst_miri_imager_distortion_flt1.asdf  jwst_miri_imager_distortion_poly6.asdf  jwst_miri_mrs12B_distortion_flt1.asdf  jwst_miri_mrs12C_specwcs_flt1.asdf  jwst_miri_mrs34A_distortion_flt2.asdf  jwst_miri_mrs34A_specwcs_flt1.asdf  jwst_miri_mrs34B_specwcs_flt3.asdf  jwst_miri_mrs_wavelengthrange_flt2.asdf  jwst_miri_mrs_wavelengthrange_flt3.asdf  jwst_miri_specwcs_lrscdp7.fits
data/crds/cdp6/: jwst_miri_specwcs_0017.asdf  jwst_miri_specwcs_0018.asdf
data/crds/cdp7/: jwst_miri_specwcs_0003.fits
data/crds/flt1/: jwst_miri_mrs12A_distortion_flt1.asdf  jwst_miri_mrs34C_specwcs_flt1.asdf
data/crds/flt2/: jwst_miri_mrs12C_distortion_flt2.asdf  jwst_miri_mrs34A_specwcs_flt2.asdf  jwst_miri_mrs34B_distortion_flt2.asdf  jwst_miri_specwcs_0006.fits
data/crds/flt3/: jwst_miri_mrs12A_specwcs_flt3.asdf  jwst_miri_mrs12B_distortion_flt3.asdf  jwst_miri_mrs12B_specwcs_flt3.asdf  jwst_miri_mrs34A_distortion_flt3.asdf
data/crds/flt4/: jwst_miri_mrs12A_specwcs_flt4.asdf  jwst_miri_mrs12C_distortion_flt4.asdf  jwst_miri_mrs34A_distortion_flt4.asdf  jwst_miri_mrs34B_distortion_flt4.asdf
data/crds/flt5/: jwst_miri_mrs12A_distortion_flt5.asdf  jwst_miri_mrs12A_specwcs_flt5.asdf  jwst_miri_mrs12B_distortion_flt5.asdf  jwst_miri_mrs34A_distortion_flt5.asdf  jwst_miri_mrs34A_specwcs_flt5.asdf  jwst_miri_mrs34C_distortion_flt5.asdf
data/crds/flt6/: jwst_miri_mrs12A_specwcs_flt6.asdf  jwst_miri_mrs12B_distortion_flt6.asdf  jwst_miri_mrs34B_distortion_flt6.asdf  jwst_miri_mrs34C_distortion_flt6.asdf  jwst_miri_mrs_wavelengthrange_flt6.asdf
data/crds/flt7/: jwst_miri_mrs12C_distortion_flt7.asdf  jwst_miri_mrs34A_distortion_flt7.asdf  jwst_miri_mrs34A_specwcs_flt7.asdf
data/crds/flt8/: jwst_miri_mrs12B_distortion_flt8.asdf  jwst_miri_mrs34A_specwcs_flt8.asdf  jwst_miri_mrs34B_distortion_flt8.asdf
idl/imager/: mirim_v2v3toxy.pro  mirim_xytov2v3.pro
idl/mrs/: mmrs_abltoxy.pro  mmrs_abltoxy_cdp8b.pro  mmrs_abtov2v3_cdp8b.pro  mmrs_siaf.pro  mmrs_v2v3toab_cdp8b.pro  mmrs_xytoabl_cdp8b.pro
miricoord/: AllDet_roundtrip.ipynb  BasicTransforms.ipynb  testsiaf.ipynb
miricoord/apt2dither/: APT_to_MIRIsim_dithers.ipynb  apt2dither.py  out.txt
miricoord/coron/: lpflat_dithers.ipynb
miricoord/general/: heron.py  mjd.py
miricoord/idl/imager/: mirim_v2v3toxy.pro
miricoord/imager/: README.md  mirim_pipetools.py  mirim_tools.py  shift_boresight.ipynb  testdistortion.ipynb
miricoord/lrs/: lrs_makesiaf.ipynb  lrs_pipetools.py  lrs_siaf.ipynb  lrs_tools.py  testdistortion.ipynb
miricoord/mrs/: CompareABV2V3.ipynb  CompareWave.ipynb  mrs_fields.py  mrs_pipetools.py  mrs_tools.py  mrsold.py  test_roundtrip.ipynb  testdistortion.ipynb
miricoord/nrsifu/: nrsifu_pipetools.py
miricoord/ossdither/: OSS_dithers.ipynb
miricoord/tel/: planning.py  tel_tools.py
(+224 files in other folders)
